dark mode navbar fixes

--- a/scss/layout/_navbar.scss
+++ b/scss/layout/_navbar.scss
@@ -54,11 +54,11 @@
 }
 
 @mixin navbar-dark() {
-  box-shadow: none;
-  @include navbar-color($dark, $white, rgba($white, .7), $white);
+  box-shadow: 0 0 0 1px $dark-mode-darken;
+  @include navbar-color($dark, $dark-mode-text, rgba($dark-mode-text, .7), $dark-mode-text);
 
   .input-icon-addon {
-    color: rgba($white, .7);
+    color: rgba($dark-mode-text, .7);
   }
 
   .form-control {
@@ -66,7 +66,7 @@
     background-color: rgba(0, 0, 0, .1);
 
     &::placeholder {
-      color: rgba($white, .7);
+      color: rgba($dark-mode-text, .7);
     }
   }
 }
